--- a/pizzamama2/menu/templates/menu/index.html
+++ b/pizzamama2/menu/templates/menu/index.html
@@ -18,6 +18,9 @@
                     <span class="menu_list_vegetarienne">Végétarienne</span>
                 {% else %}
                 {% endif %}
+                <div class="pb-2 text-orange-400">
+                    <a href="{{ pizza.nom }}">Détails</a>
+                </div>
             </div>
             {% endfor %}
         </div>
