ajout transitions + modifs détails + ajout icône panier

--- a/pizzamama2/menu/static/menu/style.css
+++ b/pizzamama2/menu/static/menu/style.css
@@ -70,3 +70,17 @@ body {
     margin-bottom: 11px;
 }
 
+main{
+    animation: transitionIn 0.8s;
+    animation-timing-function: ease-in;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
