--- a/pizzamama2/menu/templates/menu/detail.html
+++ b/pizzamama2/menu/templates/menu/detail.html
@@ -4,23 +4,45 @@
     {% endblock title %}
 {% block content %}
     <main class="flex flex-col items-center">
-        <div class="mt-[80px]">
-            <h1 class="bg-[#DD7835] mt-[80px] py-2 px-3 font-black text-3xl inline">{{ details.nom }}</h1>
+        <div class="mt-7">
+            <h1 class="bg-[#DD7835] mt-[80px] py-2 px-3 font-black text-3xl block">{{ details.nom }}</h1>
         </div>
         <div class="m-8 max-w-screen-2xl">
-            <div class="bg-white rounded-lg shadow-2xl md:flex">
-                <img src="../static/menu/images/pizza1.jpg" alt="pizza napolitaine" class="md:w-1/3 rounded-t-lg md:rounded-l-lg" />
-                <div class="p-6 flex flex-col">
-                      <h2 class="font-bold text-xl md:text-xl mb-2 text-orange-700">{{ details.ingredients }}</h2>
-                      <p class="py-2 text-orange-700">{{ details.description }}</p>
-                      <div class="mt-6 text-orange-700 font-black text-xl">
+            <div class="bg-white rounded-lg shadow-l shadow-slate-400/30 md:flex">
+                <img src="../static/menu/images/pizza1.jpg" alt="photo {{ details.nom }}" class="md:w-1/3 rounded-t-lg md:rounded-l-lg" />
+                <div class="p-6 flex flex-col gap-y-1.5">
+                      <div class="inline-block md:max-w-xs py-1 pl-2 bg-black rounded-lg text-cyan-400 font-black">{{ details.category }}</div>
+                        {% if details.vegetarienne %}
+                          <div class="inline-block md:max-w-xs py-1 pl-2 bg-[#DD7835] rounded-lg text-white font-black">Végétarienne</div>
+                        {% else %}
+                        {% endif %}
+
+                     <h2 class="font-bold text-xl md:text-xl mb-2 text-orange-700">{{ details.ingredients }}</h2>
+                     <p class="py-2 text-orange-700">{{ details.description }}</p>
+                     <div class="mt-6 text-orange-700 font-black text-xl">
                                 {{ details.prix | floatformat:2}}€
                     </div>
-                    <div class="mt-4">
-                        <a href="#"><button class="rounded-lg px-4 py-2 bg-green-700 text-green-100 hover:bg-green-800 duration-300">Commander</button></a>
+                    <div>
+                        <label class="text-black" for="">Quantité : </label>
+                        <input class="mt-10 w-16" type="number" name="" id="">
                     </div>
+                    <div class="mt-6">
+                        <a href="#"><button class="rounded-lg px-4 py-2 bg-green-700 text-green-100 hover:bg-green-800 duration-300">Ajouter au panier</button></a>
+                    </div>
+                    <p class="text-black mt-6">
+                        <span class="mt-6 font-black">
+                            Nous n'effectuons pas de livraison à domicile.
+                        </span>
+                        <br>
+                        Les commandes sont à retirer directement à la boutique :
+                        <br>
+                        <span class="font-black text-orange-600">
+                            Pizza Mama, 2 rue Tartempion, 74000 Annecy
+                        </span>.
+                    </p>
                 </div>
             </div>
         </div>
+
     </main>
 {% endblock content %}
