--- a/pizzamama2/menu/templates/menu/detail.html
+++ b/pizzamama2/menu/templates/menu/detail.html
@@ -9,7 +9,9 @@
         </div>
         <div class="m-8 max-w-screen-2xl">
             <div class="bg-white rounded-lg shadow-l shadow-slate-400/30 md:flex">
-                <img src="../static/menu/images/pizza1.jpg" alt="photo {{ details.nom }}" class="md:w-1/3 rounded-t-lg md:rounded-l-lg" />
+                {% if details.image %}
+                    <img src="{{ details.image.url }}" alt="photo {{ details.nom }}" class="md:w-1/3 rounded-t-lg md:rounded-l-lg" />
+                {% endif %}
                 <div class="p-6 flex flex-col gap-y-1.5">
                       <div class="inline-block md:max-w-xs py-1 pl-2 bg-black rounded-lg text-cyan-400 font-black">{{ details.category }}</div>
                         {% if details.vegetarienne %}
