modification barre menu --> uniquement avec clic sur icône

--- a/pizzamama2/menu/templates/menu/base.html
+++ b/pizzamama2/menu/templates/menu/base.html
@@ -18,35 +18,35 @@
                 <a href="{% url 'main:main' %}" class="flex" aria-label="Page d'accueil">
                     <img src="../static/menu/images/small_logo.png" class="xl:inline" alt="">
                 </a>
-                <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 xl:hidden bg-white">
+                <button aria-label="toggle button" aria-expanded="false" id="menu-btn" class="cursor-pointer w-7 bg-white">
                     <img src="../static/menu/images/menu.svg" alt="">
                 </button>
-                <ul id="toggled-menu" class="bg-white w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center xl:bg-slate-800 xl:mx-6 xl:static xl:z-10 xl:transform-none xl:border-none xl:flex-row xl:text-slate-200">
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                <ul id="toggled-menu" class="bg-white p-3 w-full absolute top-full left-0 -translate-y-full -z-10 text-gray-800 border-b border-gray-200 flex flex-col items-center xl:bg-slate-800 xl:mx-6 xl:static xl:z-10 xl:transform-none xl:border-none xl:flex-row xl:text-slate-200">
+                    <li class="py-2">
                         <a href="{% url 'menu:pizzas_traditionnelles' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Pizzas Traditionnelles
                         </a>
                     </li>
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                    <li class="py-2">
                         <a href="{% url 'menu:pizzas_a_la_creme' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Pizzas à la crème
                         </a>
                     </li>
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                    <li class="py-2">
                         <a href="{% url 'menu:pizzas_de_la_mer' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Pizzas de la mer
                         </a>
                     </li>
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                    <li class="py-2">
                         <a href="{% url 'menu:pizzas_exclusives' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Pizzas Exclusives
                         </a>
                     </li>
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                    <li class="py-2">
                         <a href="{% url 'menu:pizzas_vegetariennes' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Pizzas végétariennes
                         </a>
                     </li>
-                    <li class="py-4 lg:py-0 lg:mr-6">
+                    <li class="py-2">
                         <a href="{% url 'menu:index' %}" class="text-sm uppercase hover:text-amber-300 font-semibold w-full focus:text-rose-600">Toutes les pizzas
                         </a>
                     </li>
-                     <li class="py-4 lg:py-0 lg:mr-6">
+                     <li class="py-2">
                        <a href="#panier" class="flex" aria-label="Panier">
                            <img src="../static/menu/images/panier.png" class="lg:inline lg:ml-10 h-5" alt="panier">
                        </a>
